Thu Feb 25 08:16:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/tools/Split_Plan/Split_Plan.mpc:
          Added missing base projects

Thu Feb 25 07:46:04 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReader.cpp:
        * connectors/dds4ccm/impl/ndds/DataWriter.cpp:
        * connectors/dds4ccm/impl/ndds/PublicationBuiltinTopicData.h:
        * connectors/dds4ccm/impl/ndds/Publisher.cpp:
        * connectors/dds4ccm/impl/ndds/Subscriber.cpp:
        * connectors/dds4ccm/impl/ndds/Topic.cpp:
          Implemented methods wich were not implemented yet.

Wed Feb 24 22:08:45 UTC 2010  William R. Otte <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:

          Additional cleanup.

Wed Feb 24 15:23:40 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/DDSWriterEntity/Sender/Writer_Sender_exec.cpp:
        * connectors/dds4ccm/tests/InstanceHandle/Sender/Writer_Sender_exec.cpp:
        * connectors/dds4ccm/tests/SharedDomainParticipant/DifferentDatatype/Component/Component_exec.cpp:
        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.cpp:
          Resolved compiler errors.

Wed Feb 24 15:01:17 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/BuiltinTopicKey_t.h:
        * connectors/dds4ccm/impl/ndds/DataReader.h:
        * connectors/dds4ccm/impl/ndds/DataReaderHandler_T.h:
        * connectors/dds4ccm/impl/ndds/DataReaderListener.h:
        * connectors/dds4ccm/impl/ndds/DataReaderQos.h:
        * connectors/dds4ccm/impl/ndds/DataWriter.h:
        * connectors/dds4ccm/impl/ndds/DataWriterListener.h:
        * connectors/dds4ccm/impl/ndds/DataWriterQos.h:
        * connectors/dds4ccm/impl/ndds/DeadlineQosPolicy.h:
        * connectors/dds4ccm/impl/ndds/DestinationOrderQosPolicy.h:
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactoryQos.h: